# ros-turtlebot3-slam-planning

./: CMakeLists.txt  README.md  package.xml
config/: create_map.rviz  local_costmap_params.yaml  planning.rviz
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: rviz_demo.pc  urdf_tutorial.pc
devel/lib/rviz_demo/: simple_navigation_goals
devel/share/rviz_demo/cmake/: rviz_demoConfig.cmake
devel/share/urdf_tutorial/cmake/: urdf_tutorialConfig.cmake
launch/: .amcl.launch.swp  .gazebo.launch.swk  .gazebo.launch.swm  .gazebo.launch.swn  .gazebo.launch.swp  .localize.launch.swp  .planning.launch.swo  .planning.launch.swp  core.launch  create_map.launch  localize.launch  planning.launch
maps/: turtlebot3.yaml
src/: .simple_navigation_goals.cpp.swo  .simple_navigation_goals.cpp.swp
src/rviz_demo/: .CMakeLists.txt.swp  CMakeLists.txt  frames.gv  package.xml
src/rviz_demo/config/: .diffdrive.yaml.swp  base_local_planner_params.yaml  config.rviz  core.rviz  diffdrive.yaml  global_costmap_params.yaml  localize.rviz  planning.rviz
src/rviz_demo/launch/: .gazebo.launch.swl  .gazebo.launch.swo  .localize.launch.swo  .spawn.launch.swp  core.launch  create_map.launch  gazebo.launch  localize.launch  navigation_main.launch  planning.launch  rviz.launch  spawn.launch  test.launch
src/rviz_demo/maps/: room3.yaml  room3_collected.yaml
src/rviz_demo/param/: .costmap_common_params.yaml.swp  .local_costmap_params.yaml.swo  .local_costmap_params.yaml.swp  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  minimal.yaml
src/rviz_demo/urdf/: .lidar.xacro.swp  .robot.urdf.xacro.swp  .wheel.xacro.swp  01-myfirst.urdf  lidar.xacro  old-r2d2.urdf.xacro  old_robot.xacro  robot.urdf.xacro  robot.xacro  turtlebot3_burger.urdf.xacro  wheel.xacro
src/rviz_demo/worlds/: my_world.world
urdf/: .01-myfirst.urdf.swp  .turtlebot3_burger.urdf.xacro.swo  .turtlebot3_burger.urdf.xacro.swp
