<package>
  <name>rviz_demo</name>
  <version>0.5.0</version>

  <description>This package contains a number of URDF tutorials.</description>
  <author email="kreienkamp.1979531@studenti.roma.it">Chris Kreienkamp</author>

  <maintainer email="kreienkamp.197953@studenti.roma.it">Chris Kreienkamp</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/urdf_tutorial</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>action_lib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>action_lib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>action_lib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>position_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_robot_steering</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
